WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83936
Exiting full screen video brings the wrong Safari window to the foreground
https://bugs.webkit.org/show_bug.cgi?id=83936
Summary
Exiting full screen video brings the wrong Safari window to the foreground
Jer Noble
Reported
2012-04-13 13:04:50 PDT
Exiting full screen video brings the wrong Safari window to the foreground
Attachments
Patch
(3.02 KB, patch)
2012-04-13 13:12 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-04-13 13:05:15 PDT
<
rdar://problem/11123424
>
Jer Noble
Comment 2
2012-04-13 13:12:50 PDT
Created
attachment 137133
[details]
Patch
Jer Noble
Comment 3
2012-04-17 10:11:27 PDT
Comment on
attachment 137133
[details]
Patch Thanks!
WebKit Review Bot
Comment 4
2012-04-17 11:36:06 PDT
Comment on
attachment 137133
[details]
Patch Clearing flags on attachment: 137133 Committed
r114402
: <
http://trac.webkit.org/changeset/114402
>
WebKit Review Bot
Comment 5
2012-04-17 11:36:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug