Exiting full screen video brings the wrong Safari window to the foreground https://bugs.webkit.org/show_bug.cgi?id=83936

Reviewed by Adele Peterson.

Tell the original webView's window to makeKeyAndOrderFront once the exit
animation completes.

Source/WebKit/mac:

* WebView/WebFullScreenController.mm:
(-[WebFullScreenController finishedExitFullScreenAnimation:]):

Source/WebKit2:

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController finishedExitFullScreenAnimation:]):


Canonical link: https://commits.webkit.org/101671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114402 268f45cc-cd09-0410-ab3c-d52691b4dbfc