Source/WebKit2/UIProcess/mac/WKFullScreenWindowController.mm
@@ -370,6 +370,8 @@ static const NSTimeInterval DefaultWatchdogTimerInterval = 1;
     [_backgroundWindow.get() orderOut:self];
     [_backgroundWindow.get() setFrame:NSZeroRect display:YES];
 
+    [[_webView window] makeKeyAndOrderFront:self];
+
     NSEnableScreenUpdates();
 }
 
